# RustChan

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
static/css/: style.css
templates/: base.html  board.html  index.html  login.html  thread.html
templates/admin/: base.html  boards.html  dashboard.html  posts.html
