[package]
name = "rustchan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
regex = "1"
hex = "0.4"
